--- a/src/view/detail.html
+++ b/src/view/detail.html
@@ -125,7 +125,7 @@
         <img src="<%= require('../image/img.jpg') %>" width="100%" alt="" class="img">
       </div>
     </div>
-    <div class="commit base">
+    <div class="comment-detail base">
       <p class="title">雇主评价（102）</p>
       <a href="#" class="btn-all">查看全部></a>
       <div class="">
@@ -199,7 +199,6 @@
         <p class="title">推荐阿姨</p>
         <div class="aunts-list">
           <a href="#" class="item clearfix">
-            <!-- <img class="lazyload pull-left img" data-src="<%= require('../image/avatar.png') %>" width="75" height="100"> -->
             <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
             <div class="content pull-left">
               <div class="info">
