--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-11-30 10:07:56
+* @Last Modified time: 2017-11-30 10:27:36
 * @Last Modified time: 2017-11-19 19:27:16
 */
 $green: #3dbd95;
@@ -532,6 +532,7 @@ a:hover, a:focus, a:active {
   &.user-footer1 {
     background-color: #fff;
     line-height: 70px;
+    overflow: hidden;
     .left {
       width: 160px;
       a {
@@ -1296,6 +1297,40 @@ a:hover, a:focus, a:active {
       .detail {
         margin: 0;
       }
+      .swiper-container-img-list {
+        height: 100px;
+        margin-top: 10px;
+        .swiper-wrapper {
+          height: auto;
+        }
+        .swiper-slide {
+          height: auto;
+        }
+      }
+      .foot {
+        padding: 20px 0 10px 0;
+        font-size: 1em;
+        .del-comment-btn {
+          color: #333;
+          display: inline-block;
+          border-radius: 30px;
+          i {
+            margin-right: 5px;
+          }
+          &:focus {
+            color: $green;
+            background-color: #fff;
+            box-shadow: none;
+            outline: none;
+            border-color: $green;
+          }
+          &:active, &:hover {
+            background-color: #fff;
+            outline: none;
+            box-shadow: none;
+          }
+        }
+      }
     }
   }
 }
@@ -1342,6 +1377,14 @@ a:hover, a:focus, a:active {
         }
       }
     }
+  }
+}
+
+// 所有评价
+.all-comment-wrap {
+  .tag-list {
+    background-color: #fff;
+    border-bottom: 1px solid #ddd;
   }
 }
 
