--- a/src/view/detail.html
+++ b/src/view/detail.html
@@ -129,10 +129,10 @@
       <p class="title">雇主评价（102）</p>
       <a href="#" class="btn-all">查看全部></a>
       <div class="">
-        <div class="tag-list">
-          <span class="tag">勤快（11）</span>
-          <span class="tag">勤快（11）</span>
-          <span class="tag">勤快（11）</span>
+        <div class="tag-list clearfix">
+          <span class="tag pull-left">勤快（11）</span>
+          <span class="tag pull-left">勤快（11）</span>
+          <span class="tag pull-left">勤快（11）</span>
         </div>
         <div class="content-container">
           <div class="item">
