--- a/src/view/myaddress.html
+++ b/src/view/myaddress.html
@@ -22,7 +22,7 @@
         </div>
         <div class="choose clearfix">
           <div class="pull-left">
-            <input type="radio" name="address">
+            <input type="radio" name="address" autocomplete="off">
             <label class="address-radio">
               <i class="fa fa-circle-o "></i>
               默认地址
@@ -44,7 +44,7 @@
         </div>
         <div class="choose clearfix">
           <div class="pull-left">
-            <input type="radio" name="address" checked>
+            <input type="radio" name="address" checked autocomplete="off">
             <label class="address-radio">
               <i class="fa fa-circle-o "></i>
               默认地址
