--- a/src/view/myeditaddress.html
+++ b/src/view/myeditaddress.html
@@ -22,8 +22,8 @@
       </div>
       <div class="input-wrap clearfix rel area-hook">
         <label for="area" class="pull-left label-name">地区</label>
-        <!-- <input type="text" id="area" class="pull-left form-control" disabled value="舟山 定海"> -->
-        <select name="area" id="area" class="pull-left form-control" readonly>
+        <input type="text" id="area" class="pull-left form-control" disabled value=""> 
+        <select name="area" id="area-select" class="pull-left form-control dn">
           <option value=""></option>
           <option value="1">定海1</option>
           <option value="2" selected>定海2</option>
