--- a/src/view/myaddaddress.html
+++ b/src/view/myaddaddress.html
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="clearfix text-center btn-wrap">
-        <button type="submit" class="btn btn-dafault btn-save">保存</button>
+        <button type="submit" class="btn btn-dafault btn-save add-save">保存</button>
       </div>
     </form>
   </div>
