--- a/src/view/myeditaddress.html
+++ b/src/view/myeditaddress.html
@@ -43,7 +43,7 @@
         <textarea name="address" id="address" cols="30" rows="3"  class="pull-left form-control">定海定海定海定海定海定海定海</textarea>
       </div>
       <div class="clearfix text-center btn-wrap">
-        <button type="submit" class="btn btn-dafault btn-save">保存</button>
+        <button type="submit" class="btn btn-dafault btn-save edit-save">保存</button>
       </div>
     </form>
   </div>
