--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,8 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-12-02 15:20:10
-* @Last Modified time: 2017-11-19 19:27:16
+* @Last Modified time: 2017-12-03 11:40:04
 */
 $green: #3dbd95;
 $grey: #f0f0f0;
@@ -83,7 +82,10 @@ a:hover, a:focus, a:active {
   overflow: hidden;
 }
 
-
+.base-wrap {
+  overflow-y: auto;
+  height: calc(100vh - 126px);
+}
 
 .center-content {
   &.all-center-content {
@@ -1635,7 +1637,6 @@ a:hover, a:focus, a:active {
   margin-bottom: 0px; 
 }
 
-// 评价详情
 
 // 我的钱包
 .my-wallet {
@@ -1829,6 +1830,24 @@ a:hover, a:focus, a:active {
   }
 }
 
+// 发表评论
+.comment-container {
+  .worker {
+    background-color: #fff;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    .img {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      overflow: hidden;
+    }
+    .name {
+      margin: 12px 0 0 10px;
+      font-size: 1.2em;
+    }
+  }
+}
 
 .bg-grey {
   border-bottom: 1px solid #ccc;
