--- a/src/view/index.html
+++ b/src/view/index.html
@@ -8,7 +8,7 @@
   <div class="search-wrapper search-type-one">
     <p class="search-text">搜索商家、服务</p>
   </div>
-  <div class="center-content">
+  <div class="center-content base1-wrap">
     <!-- 轮播图 -->
     <div class="swiper-container">
       <div class="swiper-wrapper">
