--- a/src/view/login.html
+++ b/src/view/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <%= require('html-loader!./layout/top.html') %>
-  <div class="log-wrap">
+  <div class="log-wrap base2-wrap">
     <form action="">
       <input type="number" class="input-type phone" name="phone" id="phone" autoComplete='off' placeholder="请输入手机号">
       <input type="password" class="input-type password" name="password" id="password" autoComplete='off' placeholder="请输入密码">
