--- a/src/view/register.html
+++ b/src/view/register.html
@@ -9,7 +9,7 @@
     <a class="back" href="javascript:void(0);" onclick="window.history.back()"></a>
     <h2 class="text-center">注册账号</h2>
   </div>
-  <div class="log-wrap">
+  <div class="log-wrap base2-wrap">
     <form action="">
       <input type="number" class="input-type phone" name="phone" id="phone" autoComplete='off' placeholder="请输入手机号">
       <div class="ma-wrap">
