--- a/src/view/userCenter.html
+++ b/src/view/userCenter.html
@@ -10,7 +10,7 @@
     <h2 class="text-center">个人中心</h2>
     <a href="javascript:void(0);" class="logout">退出登录</a>
   </div>
-  <div class="user-wraper">
+  <div class="user-wraper base-wrap">
     <div class="user-top">
       <div class="info clearfix">
         <img src="" alt="" class="pull-left avatar">
