--- a/src/view/layout/1.html
+++ b/src/view/layout/1.html
@@ -1,4 +1,80 @@
 <link href="https://cdn.bootcss.com/raty/2.8.0/jquery.raty.min.css" rel="stylesheet">
 <script src="https://cdn.bootcss.com/raty/2.8.0/jquery.raty.min.js"></script>
+
+<script src="https://cdn.bootcss.com/webuploader/0.1.1/webuploader.min.js"></script>
+<link href="https://cdn.bootcss.com/webuploader/0.1.1/webuploader.css" rel="stylesheet">
+
+
 <div></div>
 $('div').raty();
+$('div').raty('score'); 
+
+<!--dom结构部分-->
+<div id="uploader-demo">
+    <!--用来存放item-->
+    <div id="fileList" class="uploader-list"></div>
+    <div id="filePicker">选择图片</div>
+</div>
+
+<script>
+  var uploader = WebUploader.create({
+
+      // 选完文件后，是否自动上传。
+      auto: true,
+
+      // swf文件路径
+      swf: BASE_URL + '/js/Uploader.swf',
+
+      // 文件接收服务端。
+      server: 'http://webuploader.duapp.com/server/fileupload.php',
+
+      // 选择文件的按钮。可选。
+      // 内部根据当前运行是创建，可能是input元素，也可能是flash.
+      pick: '#filePicker',
+
+      // 只允许选择图片文件。
+      accept: {
+          title: 'Images',
+          extensions: 'gif,jpg,jpeg,bmp,png',
+          mimeTypes: 'image/*'
+      }
+  });
+
+  // 文件上传过程中创建进度条实时显示。
+  uploader.on( 'uploadProgress', function( file, percentage ) {
+      var $li = $( '#'+file.id ),
+          $percent = $li.find('.progress span');
+
+      // 避免重复创建
+      if ( !$percent.length ) {
+          $percent = $('<p class="progress"><span></span></p>')
+                  .appendTo( $li )
+                  .find('span');
+      }
+
+      $percent.css( 'width', percentage * 100 + '%' );
+  });
+
+  // 文件上传成功，给item添加成功class, 用样式标记上传成功。
+  uploader.on( 'uploadSuccess', function( file ) {
+      $( '#'+file.id ).addClass('upload-state-done');
+  });
+
+  // 文件上传失败，显示上传出错。
+  uploader.on( 'uploadError', function( file ) {
+      var $li = $( '#'+file.id ),
+          $error = $li.find('div.error');
+
+      // 避免重复创建
+      if ( !$error.length ) {
+          $error = $('<div class="error"></div>').appendTo( $li );
+      }
+
+      $error.text('上传失败');
+  });
+
+  // 完成上传完了，成功或者失败，先删除进度条。
+  uploader.on( 'uploadComplete', function( file ) {
+      $( '#'+file.id ).find('.progress').remove();
+  });
+</script>
